--- a/cadence.ipynb
+++ b/cadence.ipynb
@@ -28,35 +28,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'numpy'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/hb/rg77cvs94cj4d3ry4mdmgn6h0000gn/T/ipykernel_46092/39913686.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mos\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpath\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mre\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'numpy'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from os import path\n",
+    "import os.path\n",
+    "from pathlib import Path\n",
     "import re\n",
+    "#from dotenv import load_dotenv\n",
     "\n",
-    "#dataSetPath = './Data Files/'"
+    "# load environment\n",
+    "# load_dotenv()\n",
+    "\n",
+    "datasets = Path('/Users/edmundlskoviak/iCloud/Data Sets/')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Define Functions"
+    "## Define Functions\n",
+    "\n",
+    "Leave be for now..."
    ]
   },
   {
@@ -166,13 +161,157 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2d9b7361",
+   "metadata": {},
+   "source": [
+    "## Old Code -- deprecate"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "connStr = 'mysql+mysqldb://root:terces@0.0.0.0:3306/Activity'\n",
-    "df = pd.read_sql_query('Table DataFrame;',connStr)"
+    "#connStr = 'mysql+mysqldb://root:terces@0.0.0.0:3306/Activity'\n",
+    "#df = pd.read_sql_query('Table DataFrame;',connStr)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7a6b5369",
+   "metadata": {},
+   "source": [
+    "# New Approach\n",
+    "\n",
+    "The csv data referenced below is an extract from the online database.  Need to parse it and create a table to be scanned into the R processor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "325bc1fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv( datasets / 'sets.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "c3a32064",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>date</th>\n",
+       "      <th>exercise_id</th>\n",
+       "      <th>cadence</th>\n",
+       "      <th>weights</th>\n",
+       "      <th>weight_unit</th>\n",
+       "      <th>notes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>7235</td>\n",
+       "      <td>2022-11-20 11:00:00</td>\n",
+       "      <td>125</td>\n",
+       "      <td>5*[7]</td>\n",
+       "      <td>BW</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Depth</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>7236</td>\n",
+       "      <td>2022-11-20 11:00:00</td>\n",
+       "      <td>121</td>\n",
+       "      <td>5*[7]</td>\n",
+       "      <td>25</td>\n",
+       "      <td>lb</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>7237</td>\n",
+       "      <td>2022-11-20 11:00:00</td>\n",
+       "      <td>7</td>\n",
+       "      <td>5*[7]</td>\n",
+       "      <td>95</td>\n",
+       "      <td>lb</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>7238</td>\n",
+       "      <td>2022-11-20 11:00:00</td>\n",
+       "      <td>105</td>\n",
+       "      <td>5*[10]</td>\n",
+       "      <td>[30,35,37.5,37,5,37.5]</td>\n",
+       "      <td>lb</td>\n",
+       "      <td>sak</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>7239</td>\n",
+       "      <td>2022-11-20 11:00:00</td>\n",
+       "      <td>117</td>\n",
+       "      <td>4*[12]</td>\n",
+       "      <td>[95]</td>\n",
+       "      <td>lb</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     id                 date  exercise_id cadence                 weights  \\\n",
+       "0  7235  2022-11-20 11:00:00          125   5*[7]                      BW   \n",
+       "1  7236  2022-11-20 11:00:00          121   5*[7]                      25   \n",
+       "2  7237  2022-11-20 11:00:00            7   5*[7]                      95   \n",
+       "3  7238  2022-11-20 11:00:00          105  5*[10]  [30,35,37.5,37,5,37.5]   \n",
+       "4  7239  2022-11-20 11:00:00          117  4*[12]                    [95]   \n",
+       "\n",
+       "  weight_unit  notes  \n",
+       "0         NaN  Depth  \n",
+       "1          lb    NaN  \n",
+       "2          lb    NaN  \n",
+       "3          lb    sak  \n",
+       "4          lb    NaN  "
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()\n"
    ]
   },
   {
@@ -347,7 +486,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
