updating to pull directly

--- a/Notebooks/cadence.ipynb
+++ b/Notebooks/cadence.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,12 +37,11 @@
     "import os\n",
     "from pathlib import Path\n",
     "import re\n",
-    "#from dotenv import load_dotenv\n",
+    "from sqlalchemy import (create_engine)\n",
     "\n",
-    "# load environment\n",
-    "# load_dotenv()\n",
     "\n",
     "PGURI = os.environ['PG_AZURE_URI']\n",
+    "PGPW = os.environ['PG_AZURE_PW']\n",
     "\n",
     "\n",
     "datasets = Path('/Users/edmundlskoviak/iCloud/Data Sets/')"
@@ -117,24 +116,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d9b7361",
-   "metadata": {},
-   "source": [
-    "## Old Code -- deprecate"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#connStr = 'mysql+mysqldb://root:terces@0.0.0.0:3306/Activity'\n",
-    "#df = pd.read_sql_query('Table DataFrame;',connStr)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "7a6b5369",
    "metadata": {},
    "source": [
@@ -152,6 +133,14 @@
    "source": [
     "df = pd.read_csv( datasets / 'sets.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36dfa03f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
